--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
-.button {
+.button1 {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -15,6 +15,28 @@
   text-decoration: none;
 }
 
+.button2 {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 10px 20px 10px 20px;
+  width: 100px;
+  height: 18px;
+  margin: 5px;
+  text-decoration: none;
+  display: inline-block;
+  float: top;
+}
+
 .button:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
@@ -26,7 +48,7 @@
 }
 
 td{
-	padding:10px;
+	padding:5px;
 }
 
 h5 {
